--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,12 @@ body {
   box-sizing: border-box;
   font-family: "Teko", sans-serif;
 }
+
+html.lock,
+body.lock {
+  overflow: hidden;
+}
+
 button {
   border: 0;
   outline: 0;
@@ -975,7 +981,7 @@ button {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: black;
+    background-color: rgba($color: white, $alpha: 1);
     z-index: 3;
   }
   .header {
@@ -3104,7 +3110,6 @@ button {
       top: 0;
       left: 0;
       width: 100%;
-      background-color: black;
     }
     .header {
       max-width: 768px;
@@ -3124,7 +3129,7 @@ button {
         position: relative;
 
         .header__content__logo {
-          font-size: 22px;
+          font-size: 30px;
           grid-area: top-logo;
           width: auto;
 
@@ -3135,6 +3140,7 @@ button {
         .header__content__burger {
           display: grid;
           justify-self: end;
+          align-self: center;
           position: relative;
           width: 30px;
           height: 25px;
@@ -3173,7 +3179,7 @@ button {
         .header__content__burger.active-burger {
           position: fixed;
           top: 16px;
-          right: 20px;
+          right: 10px;
           z-index: 50;
         }
 
@@ -3192,55 +3198,71 @@ button {
         .header__content__navigation {
           position: fixed;
           top: -100%;
-          left: 0;
+          left: -100%;
           width: 100%;
-          height: 100%;
-          background-color: black;
+          // height: 100vh;
+          border-bottom: none;
           display: grid;
-          grid-template-columns: auto;
+          grid-template-columns: 1fr;
           grid-template-rows: auto auto;
-          gap: 0px 0px;
+          gap: 20px 0px;
           grid-template-areas:
             "search"
             "nav-list";
-          justify-content: start;
-          align-content: center;
           justify-items: start;
+          align-items: start;
+          background-color: rgba($color: #0c0c0c, $alpha: 1);
 
           ul {
-            padding: 20px 20px;
+            padding: 0px 20px;
             display: grid;
             grid-area: nav-list;
-            grid-template-columns: auto;
-            grid-template-rows: auto auto auto auto auto;
+            grid-template-columns: 1fr;
+            grid-template-rows: 60px 60px 60px 60px;
             gap: 0px 0px;
             grid-template-areas:
               "nav-item1"
               "nav-item2"
               "nav-item3"
               "nav-item4";
-            justify-content: start;
-            align-content: center;
-            justify-items: start;
-            gap: 0px 0px;
-
+            width: 100%;
+            box-sizing: border-box;
+            align-items: center;
+            align-content: start;
+            background-color: rgba($color: #0c0c0c, $alpha: 1);
+            height: 100vh;
             li {
               height: 60px;
-              align-items: center;
 
               .navigation__item {
                 width: 100%;
-                height: 60px;
               }
               &:hover {
               }
+            }
+            :nth-child(1) {
+              grid-area: nav-item1;
+            }
+            :nth-child(2) {
+              grid-area: nav-item2;
+            }
+            :nth-child(3) {
+              grid-area: nav-item3;
+            }
+            :nth-child(4) {
+              grid-area: nav-item4;
             }
           }
           .header__content__navigation__search {
             display: grid;
             align-items: center;
-            justify-content: center;
-            // justify-self: end;
+            justify-content: start;
+            justify-self: start;
+            position: static;
+            grid-template-columns: auto auto;
+            grid-template-rows: 1fr;
+            gap: 20px 0px;
+            grid-template-areas: "input btn";
             // position: absolute;
             // top: 0;
             // right: 0;
@@ -3251,12 +3273,27 @@ button {
           }
 
           .header__content__navigation__search:hover > .search-input {
-            width: 100%;
+            width: 190px;
             padding: 0px 20px;
           }
 
           .header__content__navigation__search:hover > .search-btn {
+          }
+
+          .search-btn {
+            color: white;
+            background-color: rgba($color: $color-accent, $alpha: 1);
+            position: relative;
+            width: 40px;
+            height: 100%;
+            display: grid;
+            align-items: center;
+            justify-content: center;
+            justify-self: start;
+            grid-area: btn;
             svg * {
+              width: 20px;
+              height: auto;
               fill: white;
             }
 
@@ -3272,41 +3309,15 @@ button {
             }
           }
 
-          .search-btn {
-            color: white;
-            background-color: rgba($color: $color-accent, $alpha: 0.3);
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            width: 60px;
-            display: grid;
-            align-items: center;
-            justify-content: center;
-            svg {
-              width: 20px;
-              height: auto;
-            }
-          }
-
           .search-input {
-            border: none;
             background-color: rgba($color: $color-accent, $alpha: 1);
-            outline: none;
-            padding: 0px;
-            color: white;
-            font-size: 16px;
-            -webkit-transition: all 0.2s ease-in-out;
-            -moz-transition: all 0.2s ease-in-out;
-            -o-transition: all 0.2s ease-in-out;
-            -ms-transition: all 0.2s ease-in-out;
-            transition: all 0.2s ease-in-out;
-            width: 0px;
-            height: 100%;
+            padding: 0px 20px;
+            width: 190px;
+            height: 60px;
             box-sizing: border-box;
+            grid-area: input;
 
             &::placeholder {
-              color: white;
             }
           }
         }
