--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3901,7 +3901,7 @@ button {
       width: 100%;
     }
     .header {
-      max-width: 320px;
+      max-width: 320px !important;
       margin: 0 auto;
       padding: 0px 20px !important;
       box-sizing: border-box;
