--- a/css/style.css
+++ b/css/style.css
@@ -2557,7 +2557,7 @@ button:hover {
   }
   .header-container .header .header__content {
     display: grid;
-    grid-template-columns: 1.8fr 0.2fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     gap: 0px 0px;
     grid-template-areas: "top-logo navigation";
@@ -2570,6 +2570,7 @@ button:hover {
     font-size: 30px;
     grid-area: top-logo;
     width: auto;
+    justify-self: start;
   }
   .header-container .header .header__content .header__content__burger {
     display: grid;
@@ -3180,7 +3181,7 @@ button:hover {
     width: 100%;
   }
   .header-container .header {
-    max-width: 320px !important;
+    max-width: 320px;
     margin: 0 auto;
     padding: 0px 20px !important;
     box-sizing: border-box;
