--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2715,7 +2715,7 @@ button {
     }
   }
   .about-section {
-    padding: 80px 40px 50px 40px;
+    padding: 80px 20px 50px 20px;
     position: relative;
     margin: 430px 0px 0px 0px;
     .about-section__content {
@@ -2810,7 +2810,7 @@ button {
       .slide__wrapper {
         .slide__wrapper__container {
           max-width: 768px;
-          padding: 60px 40px 0px 40px;
+          padding: 60px 20px 0px 20px;
           display: grid;
           grid-template-columns: 1fr;
           grid-template-rows: auto auto;
@@ -2956,7 +2956,7 @@ button {
         "headline . . ."
         ". . . .";
       position: relative;
-      padding: 0px 40px 80px 40px;
+      padding: 0px 20px 80px 20px;
       .gallery-section__content__more-btn {
         grid-area: btn;
         justify-self: end;
@@ -2999,7 +2999,8 @@ button {
   .contacts-section {
     .contacts-section__content {
       display: grid;
-      padding: 0px 40px 190px 40px;
+      padding: 0px 20px 190px 20px;
+      box-sizing: border-box;
 
       .contacts-section__content__headline {
         font-size: $headline-1280-size;
