--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3052,6 +3052,7 @@ button {
 
         textarea {
           padding: 15px 20px;
+          resize: horizontal;
         }
 
         input:focus,
