--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3048,11 +3048,12 @@ button {
           padding: 0px 20px;
           align-self: stretch;
           height: 50px;
+          box-sizing: border-box;
         }
 
         textarea {
           padding: 15px 20px;
-          resize: horizontal;
+          box-sizing: border-box;
         }
 
         input:focus,
@@ -3330,6 +3331,111 @@ button {
           left: 0;
         }
       }
+    }
+  }
+}
+
+@media (max-width: 440px) {
+  .contacts-section {
+    .contacts-section__content {
+      display: grid;
+      padding: 0px 20px 190px 20px;
+
+      .contacts-section__content__headline {
+        font-size: $headline-1280-size;
+        height: 40px;
+        margin: 0px 0px 70px 0px;
+      }
+    }
+    .contacts-section__content__form {
+      .form__block {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto auto auto auto;
+        gap: 1px 1px;
+        grid-template-areas:
+          "."
+          "."
+          "."
+          "."
+          "textarea"
+          "btn"
+          "contacts";
+        grid-area: form;
+        align-items: center;
+        .form__block__contacts {
+          grid-area: contacts;
+          padding: 0px 0px 0px 0px;
+          margin: 40px 0px 0px 0px;
+          justify-self: center;
+          text-align: center;
+
+          .form__block__contacts__item {
+            margin: 10px 0px;
+            font-size: 12px;
+            i {
+              display: inline-block;
+            }
+          }
+          .phone {
+            font-size: 20px;
+            height: 20px;
+          }
+          :last-child {
+            margin: 10px 0px 0px 0px;
+          }
+        }
+        input {
+          padding: 0px 20px;
+          align-self: stretch;
+          height: 50px;
+        }
+
+        textarea {
+          padding: 15px 20px;
+        }
+
+        input:focus,
+        textarea:focus {
+          &::placeholder {
+          }
+        }
+
+        .form__block__button-wrapper {
+          width: 180px;
+          height: 50px;
+          grid-area: btn;
+          justify-self: center;
+          margin: 50px 0px 0px 0px;
+
+          .form-btn {
+            max-width: 180px;
+            width: 180px;
+            height: 50px;
+            text-align: center;
+            svg {
+              position: absolute;
+              left: 0;
+              top: 0;
+              fill: none;
+              stroke: white;
+              stroke-dasharray: 150 480;
+              stroke-dashoffset: 150;
+              transition: 1s ease-in-out;
+            }
+          }
+
+          .form-btn:hover {
+          }
+
+          .form-btn:hover svg {
+            stroke-dashoffset: -480;
+          }
+        }
+      }
+    }
+    &:before {
+      display: none;
     }
   }
 }
