--- a/css/style.css
+++ b/css/style.css
@@ -2730,6 +2730,39 @@ button:hover {
   }
 }
 @media (max-width: 440px) {
+  .gallery-section .gallery-section__content {
+    padding: 0px 20px !important;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr auto;
+    gap: 0px 0px;
+    grid-template-areas: "headline headline" ". ." ". ." ". ." "btn btn";
+    position: relative;
+    padding: 0px 20px 70px 20px !important;
+  }
+  .gallery-section .gallery-section__content .gallery-section__content__more-btn {
+    grid-area: btn;
+    justify-self: center;
+    max-width: 200px;
+    margin: 50px 0px 0px 0px;
+    font-size: 20px;
+  }
+  .gallery-section .gallery-section__content .gallery-section__content__headline {
+    grid-area: headline;
+    font-size: 36px;
+    align-self: start;
+    justify-self: center;
+    text-align: center;
+    height: 40px;
+    margin: 0px 0px 40px 0px;
+    max-width: 300px;
+  }
+  .gallery-section .gallery-section__content .gallery-section__content__headline:before {
+    display: none;
+  }
+  .gallery-section .gallery-section__content .gallery-section__content__item {
+    height: 150px;
+  }
   .contacts-section .contacts-section__content {
     display: grid;
     padding: 0px 20px 190px 20px;
