--- a/scss/style.scss
+++ b/scss/style.scss
@@ -817,6 +817,8 @@ button {
         outline: 0;
         padding: 0px 20px;
         font-family: "Poppins", sans-serif;
+        font-size: 14px;
+        font-weight: 300;
         background-color: rgba($color: white, $alpha: 0.1);
         color: white;
         -webkit-transition: all 0.3s ease-in-out;
@@ -827,6 +829,10 @@ button {
         align-self: stretch;
         -webkit-backdrop-filter: blur(4px);
         backdrop-filter: blur(4px);
+        &::placeholder {
+          font-size: 14px;
+          font-weight: 300;
+        }
       }
 
       textarea {
@@ -835,6 +841,8 @@ button {
         outline: 0;
         resize: none;
         font-family: "Poppins", sans-serif;
+        font-size: 14px;
+        font-weight: 300;
         background-color: rgba($color: white, $alpha: 0.1);
         color: white;
         padding: 15px 20px;
@@ -846,6 +854,10 @@ button {
         align-self: stretch;
         -webkit-backdrop-filter: blur(4px);
         backdrop-filter: blur(4px);
+        &::placeholder {
+          font-size: 14px;
+          font-weight: 300;
+        }
       }
 
       input:focus,
