--- a/css/style.css
+++ b/css/style.css
@@ -903,7 +903,7 @@ button:hover {
 }
 
 .lightHeader {
-  background-color: rgba(255, 255, 255, 0.03);
+  background-color: #141414;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -925,17 +925,6 @@ button:hover {
   left: 0;
   right: 0;
   z-index: 100;
-  -webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);
-}
-.header-container:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: white;
-  z-index: 3;
 }
 .header-container .header {
   max-width: 1440px;
@@ -975,7 +964,6 @@ button:hover {
   gap: 0px 0px;
   grid-template-areas: "nav-list search";
   z-index: 3;
-  border-bottom: 1px solid rgba(202, 176, 57, 0.3);
   position: relative;
   width: 100%;
 }
@@ -1002,10 +990,11 @@ button:hover {
 .header-container .header .header__content .header__content__navigation ul li .navigation__item {
   color: rgba(255, 255, 255, 0.5);
   font-weight: 300;
+  text-transform: uppercase;
   font-size: 14px;
   line-height: 1;
   text-decoration: none;
-  font-family: "Poppins", sans-serif;
+  font-size: 22px;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -1503,12 +1492,6 @@ button:hover {
     right: 0;
     z-index: 100;
   }
-  .header-container:before {
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: black;
-  }
   .header-container .header {
     max-width: 1280px;
     margin: 0 auto;
@@ -1992,12 +1975,6 @@ button:hover {
     left: 0;
     right: 0;
     z-index: 100;
-  }
-  .header-container:before {
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: black;
   }
   .header-container .header {
     max-width: 1024px;
@@ -2558,11 +2535,6 @@ button:hover {
     left: 0;
     right: 0;
     z-index: 100;
-  }
-  .header-container:before {
-    top: 0;
-    left: 0;
-    width: 100%;
   }
   .header-container .header {
     max-width: 768px;
@@ -3366,11 +3338,6 @@ button:hover {
     left: 0;
     right: 0;
     z-index: 100;
-  }
-  .header-container:before {
-    top: 0;
-    left: 0;
-    width: 100%;
   }
   .header-container .header {
     max-width: 320px;
